<resources>
   <!--TODO 2: update the app name to FlagQuiz_firstname-->
   <!--Text changed on "app_name"-->
   <string name="app_name">FlagQuiz_Mohamed</string>

   <string name="action_settings">Settings</string>
   <string name="number_of_choices">Number of Choices</string>
   <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
   <string name="world_regions">Regions</string>
   <string name="world_regions_description">Regions to include in the quiz</string>
   <string name="guess_country">Guess the Country</string>

   <!--TODO 6: Add to the string format the Questions answered on first attempts & the Score-->
   <string name="results">%1$d guesses, %2$.02f%% correct,\n%3$dCorrect Answers on first time attempt,\nTotal score: %4$d</string>

   <string name="incorrect_answer">Incorrect!</string>

   <!--TODO 3: update the appropriate string resources and Toast message.-->
   <!--Text changed on "name"-->
   <string name="default_region_message">One region must be selected. Setting Europe as the default region.</string>

   <string name="restarting_quiz">Quiz will restart with your new settings</string>
   <string name="question">Question %1$d of %2$d</string>
   <string name="reset_quiz">Reset Quiz</string>
   <string name="image_description">Image of the current flag in the quiz</string>

   <!--TODO 3: Change the default to Europe-->
   <!--Text changed on "default_region"-->
   <string name="default_region">Europe</string>

   <string name="title_activity_settings">Settings</string>
   <string name="score">Score: 0</string>

   <!--TODO 7: Game score details & Dialog  -->
   <string name="game_score_details">The score counter will be based on the user guesses: \n
      First correct guess = 20 points\n
      Second correct guess = 10 points\n
      Third correct guess = 5 points\n
      Fourth correct guess = 1 points\n
   </string>

   <!--TODO 4: Strings for the ListPreference (preferences.xml)-->
   <string name="number_of_questions">Number of Questions</string>
   <string name="no_of_questions_summary">Set the number of questions to be answered 10 to 50</string>

   <!--TODO 8: Guess the capital string-->
   <string name="guess_the_capital">Bonus Question: Guess the Capital name of the county?</string>

   <!--TODO 9: Strings for the Dialog relate to the highest score achievement-->
   <string name="dialog_ok">Ok</string>
   <string name="high_score_achieved">You have achieved new high score!!!!</string>
   <string name="points_high_score_achieved"> points</string>
   <string name="highest_score_achieve_settings">The highest score achieved:</string>
   <string name="pref_highestscore">pref_highestScore</string>



</resources>
